FIX wrapping SOQL text to stop horizontal scroll bars from appearing

--- a/graphviz/main/default/aura/SOQLRenderer/SOQLRenderer.css
+++ b/graphviz/main/default/aura/SOQLRenderer/SOQLRenderer.css
@@ -13,6 +13,10 @@
     font-size: 1rem;
 }
 
+.THIS ul.preview li {
+    word-wrap: break-word;
+}
+
 .THIS .close-button {
     margin-left: 1rem;
 }
